# flatc_deserializer

./: MANIFEST.in  NOTICE  README.MD  flatc_deserializer.py  flatc_deserializer_batch.py  flatc_deserializer_frontend.py  flatc_download_funcs.py  flatc_downloader.py  flatc_funcs.py  main.py  pyproject.toml  requirements.txt  requirements_frontend.txt
.github/workflows/: build_executable.yml  build_executable_nuitka.yml  greetings.yml
localization/en_US/: flatc_download_funcs.yml  frontend.yml  main.yml
localization/ru_RU/: flatc_download_funcs.yml  frontend.yml  main.yml
src/flatc_deserializer/: deserializer.py  deserializer_batch.py  deserializer_frontend.py  downloader.py  flatc_funcs.py  general_funcs.py
src/flatc_deserializer/localization/en_US/: flatc_download_funcs.yml  flatc_funcs.yml  frontend.yml
src/flatc_deserializer/localization/ru_RU/: flatc_funcs.yml  frontend.yml
